--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
   </head>
   <body>
     <div class="row dark_blue banner">
-        <h1>Wasserstein Style Transfer</h1><a href="https://arxiv.org/abs/1905.12828">[arxiv paper]</a>
+        <h1>Wasserstein Style Transfer</h1><a href="http://arxiv.org/abs/1905.12828">[arxiv paper]</a>
     </div>
     <div class="row ">
       <div class="column-left" style="background-color:black">
