--- a/index.html
+++ b/index.html
@@ -171,8 +171,7 @@
            
             <br><br><br>
         </div>
-    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
-    <script>window.jQuery || document.write(unescape('%3Cscript src="path/to/jquery.min.js"%3E%3C/script%3E'))</script>
+    <script src="jquery-1.11.1.min.js></script>
     <script>
     jQuery(function($){
         $('tr:nth-child(1) td:nth-child(1)').mouseenter(function(){
