--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
         <div class="footer_column-right">
         <p>Wasserstein Style Transfer is a Gaussian optimal transport for image style transfer in an Encoder/Decoder framework. Optimal transport for Gaussian measures has closed forms Monge mappings from source to target distributions. Interpolates between a content and a style image can be seen as geodesics in the Wasserstein Geometry. This page demonstrates how to mix different target styles using Wasserstein barycenter of Gaussian measures.
         <br><br>
-        For further details, please check out the paper: https://arxiv.org/abs/1905.12828<br><br>
+        For further details, please check out the paper: <a href="https://arxiv.org/abs/1905.12828">https://arxiv.org/abs/1905.12828</a><br><br>
         Related work:<br><br>
         Li, Y., Fang, C., Yang, J., Wang, Z., Lu, X., and Yang, M. H. (2017). Universal style transfer via feature transforms. In Advances in neural information processing systems (pp. 386-396).<br><br>
         Huang, X., and Belongie, S. (2017). Arbitrary style transfer in real-time with adaptive instance normalization. In Proceedings of the IEEE International Conference on Computer Vision (pp. 1501-1510). 
